--- a/public/perfil_administrador.html
+++ b/public/perfil_administrador.html
@@ -5,9 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tudo Sobre Lactose | Aquela da Lactose</title>
+    <title>Receitas | Aquela da Lactose</title>
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/header.css">
+
 
 </head>
 
@@ -28,7 +31,7 @@
                 <li class="submenu">
                     Conteúdo
                     <ul>
-                        <li class="agora">
+                        <li>
                             <a href="tudo-sobre-lactose.html">
                                 Tudo sobre Lactose
                             </a>
@@ -69,6 +72,7 @@
         </div>
     </div>
     <!-- FIM HEADER -->
+
 
 
 
