--- a/public/contato.html
+++ b/public/contato.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contato - Aquela da Lactose</title>
+    <title>Contato | Aquela da Lactose</title>
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/contato.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/header.css">
+
 
 </head>
+
 <body>
-    
+
     <!-- HEADER -->
     <div class="header">
         <div class="container_menu">
@@ -72,7 +77,7 @@
     <!-- INICIO CONTATO -->
     <div class="divisor">
 
-        <span class="populares">
+        <span>
             bora bater um papo?
         </span>
 
@@ -104,7 +109,8 @@
             <br>
 
             Mensagem: <br>
-            <textarea type="text" placeholder="Deixe a sua mensagem aqui" id="input_mensagem_contato" class="input_mensagem"></textarea>
+            <textarea type="text" placeholder="Deixe a sua mensagem aqui" id="input_mensagem_contato"
+                class="input_mensagem"></textarea>
 
             <div class="btn_contato">
                 <button class="btn_enviar_contato">
