--- a/public/dicas.html
+++ b/public/dicas.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dicas - Aquela da Lactose</title>
+    <title>Dicas | Aquela da Lactose</title>
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/header.css">
 
 </head>
+
 <body>
-    
+
     <!-- HEADER -->
     <div class="header">
         <div class="container_menu">
@@ -69,37 +73,7 @@
     <!-- FIM HEADER -->
 
 
-    <div class="container_login">
 
-        <div class="container_img">
-            <img src="" alt="">
-        </div>
-
-        <div class="form_login">
-
-            <span>
-                Login
-            </span>
-
-            <input type="email" placeholder="email@email.com.br" id="input_email_login">
-            <br>
-            <input type="password" placeholder="Informe a sua senha">
-            <br>
-
-            <span>
-                Esqueci a senha
-            </span>
-
-            <button>
-                Entrar
-            </button>
-
-            <span>
-                É novo por aqui? Crie a sua conta aqui!
-            </span>
-        </div>
-
-    </div>
 
     <!-- INCIO FOOTER -->
     <div class="footer">
