--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aquela da Lactose | Início </title>
+    <title>Início | Aquela da Lactose</title>
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/header.css">
 
 </head>
 
@@ -204,9 +206,9 @@
 
                 <img src="img/seta-news.png" alt="" width="25px">
             </div>
-            
+
         </div>
-        
+
     </div>
     <!-- FIM NEWSLATTER -->
 
