--- a/public/receitas.html
+++ b/public/receitas.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Receitas - Aquela da Lactose</title>
+    <title>Receitas | Aquela da Lactose</title>
 
     <link rel="stylesheet" href="css/style.css">
 
 </head>
+
 <body>
-    
+
     <!-- HEADER -->
     <div class="header">
         <div class="container_menu">
