criação dos perfis adm e usuário + organização do css

--- a/public/perfil_administrador.html
+++ b/public/perfil_administrador.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Receitas | Aquela da Lactose</title>
+    <title>Perfil ADM | Aquela da Lactose</title>
 
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="css/perfil_administrador.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/header.css">
 
@@ -73,8 +73,65 @@
     </div>
     <!-- FIM HEADER -->
 
+    <div class="container_geral">
+
+        <div class="container_perfil">
+
+            <h1>Administrador</h1>
+
+            <img src="img/perfil-adm.png" alt="perfil_adm">
+
+            <h2>Heloisa Brito</h2>
+
+            <span>heloisa@sptech.com</span>
+            <br>
+            <br>
+            <strong>Data de Nascimento:</strong>
+            <span>06/04/1997</span>
+            <br>
+            <br>
+            <span>
+                <a href="index.html">Sair</a>
+            </span>
+
+        </div>
 
 
+        <div class="container_metricas">
+
+            <div class="divisor">
+
+                <span>Métricas</span>
+                <img src="img/divisor.png" alt="" width="900px">
+
+            </div>
+
+            <div class="metricas">
+
+                <div class="usuario_media">
+                    <div class="usuarios_cadastrados">
+                        <strong>Usuários <br>cadastrados</strong>
+                        <span>123</span>
+                    </div>
+
+                    <div class="media_idade">
+                        <strong>Média de idade</strong>
+                        <span>25</span>
+                    </div>
+                </div>
+
+
+                <div class="postagens_forum">
+                    <strong>Quantidade de postagens no Fórum</strong>
+                    <span>280</span>
+                </div>
+
+
+            </div>
+
+        </div>
+
+    </div>
 
     <!-- INCIO FOOTER -->
     <div class="footer">
